--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -10,7 +10,7 @@ spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:db/init-test-data.sql
 
 # JPA DDL 自动创建
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=true
