--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
     <!-- Java版本配置 -->
     <properties>
         <java.version>21</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
     
     <!-- 2. 添加核心依赖 -->
@@ -67,7 +69,6 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>4.11.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -75,12 +76,11 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>4.11.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
     
-     <!-- 9. 配置Maven插件 -->
+    <!-- 9. 配置Maven插件 -->
     <build>
         <plugins>
             <!-- Maven编译器插件，配置Java版本 -->
